<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/activity3">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="36sp"
        android:textColor="#33691E"
        android:textStyle="bold"
        android:layout_marginTop="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create your new account   "
        android:textSize="15sp"
        android:textColor="#8c8c8c"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/et_fullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_new_account"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp"
        android:drawableStart="@drawable/ic_person_24"
        android:background="@drawable/bg_corner"
        android:padding="12dp"
        android:inputType="text"
        android:hint="@string/fullname"
        android:drawablePadding="10dp"
        android:drawableTint="#33691E"
        android:backgroundTint="#E6E6E6"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fullname"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="32dp"
        android:drawableStart="@drawable/ic_email_24"
        android:background="@drawable/bg_corner"
        android:padding="12dp"
        android:inputType="text"
        android:hint="@string/email"
        android:drawablePadding="10dp"
        android:drawableTint="#33691E"
        android:backgroundTint="#E6E6E6"
        />

    <EditText
        android:id="@+id/et_passwordregis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="32dp"
        android:drawableStart="@drawable/ic_lock_24"
        android:background="@drawable/bg_corner"
        android:padding="12dp"
        android:inputType="text"
        android:hint="@string/password"
        android:drawablePadding="10dp"
        android:drawableTint="#33691E"
        android:backgroundTint="#E6E6E6"
        />

    <EditText
        android:id="@+id/et_confirmpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passwordregis"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="32dp"
        android:drawableStart="@drawable/ic_lock_24"
        android:background="@drawable/bg_corner"
        android:padding="12dp"
        android:inputType="text"
        android:hint="@string/confirm_password"
        android:drawablePadding="10dp"
        android:drawableTint="#33691E"
        android:backgroundTint="#E6E6E6"
        />

    <TextView
        android:id="@+id/tv_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirmpassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/termofuse"
        android:textAlignment="center"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_singupregis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:padding="12dp"
        android:backgroundTint="#33691E"
        app:cornerRadius="16dp"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>